add pagination && update Openapi
