# tezos-connector/module/openapi.yaml
@@ -140,6 +140,117 @@ paths:
           $ref: "#/components/schemas/error403"
         500:
           $ref: "#/components/schemas/error500"
+  /v3/tezos/wallet:
+    post:
+      tags:
+        - Blockchain / Tezos
+      summary: Generate Tezos Wallet
+      description: <p>Generate Tezos Wallet.</p>
+      operationId: TezosGenerateWallet
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                mnemonic:
+                  $ref: "#/components/schemas/mnemonic"
+        required: false
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mnemonic:
+                    $ref: "#/components/schemas/mnemonic"
+                  xpub:
+                    type: string
+                    description: "Extended public key of wallet."
+                    example: "d0015610346fda336c1fc894feb23fc35045edd1ebbed634950786bd60d7dbc80d5bc8d179b30ca90abb10e4b7e69a90f78cb841a598390bf24531fb9c3fd793"
+          description: OK
+        403:
+          $ref: "#/components/schemas/error403"
+        500:
+          $ref: "#/components/schemas/error500"
+  /v3/tezos/address/:xpub/:index:
+    get:
+      tags:
+        - Blockchain / Tezos
+      summary: Genarate address from xpub and derivation path
+      description: <p>Generate Tezos deposit address from Extended public key. Deposit address is generated for the specific index - each extended public key can generate
+        up to 2^32 addresses starting from index 0 until 2^31</p>
+      operationId: TezosGenerateAddress
+      parameters:
+        - description: "Extended public key of wallet."
+          in: path
+          name: xpub
+          required: true
+          example: d0015610346fda336c1fc894feb23fc35045edd1ebbed634950786bd60d7dbc80d5bc8d179b30ca90abb10e4b7e69a90f78cb841a598390bf24531fb9c3fd793
+          schema:
+            type: string
+        - description: "Derivation index of desired address to be generated."
+          in: path
+          name: index
+          required: true
+          example: 1
+          schema:
+            type: number
+            minimum: 0
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  address:
+                    type: string
+                    description: Tezos Address generated by a xpub and a desired derivation index
+                    example: "tz1gAPcAa5iou9pfY7DKUfG9ksxw1z34geVe"
+          description: OK
+        403:
+          $ref: "#/components/schemas/error403"
+        500:
+          $ref: "#/components/schemas/error500"
+  /v3/tezos/wallet/priv:
+    post:
+      tags:
+        - Blockchain / Tezos
+      summary: Genarate private key from mnemonic and a desired derivation index
+      description: |
+        <p>Generate private key from mnemonic and a desired derivation index.</p>
+      operationId: TezosGeneratePrivateKeyFromMnemonic
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                mnemonic:
+                  $ref: "#/components/schemas/mnemonic"
+                index:
+                  type: number
+                  description: Derivation index of desired address to be generated.
+                  example: 1
+        required: true
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  key:
+                    type: string
+                    description: private key generated by mnemonic and a desired derivation index
+                    example: "edsk3HBxVKiyhMtWy41Ld4Go7S4f44J38akYkLydsgHc4QRFvCJsW7"
+          description: OK
+        403:
+          $ref: "#/components/schemas/error403"
+        500:
+          $ref: "#/components/schemas/error500"
   /v3/tezos/broadcast:
     post:
       tags:
@@ -160,6 +271,8 @@ paths:
                   type: string
                   description: Transaction data.
                   example: "83a400818258207aa56587eefe3bf7597a0cf5bcfbb9294f8d8ce69017b25198de74c585abef720101828258390094adf2d6d52d868d96714c9730d71b883f9666dd690ffe76e1ea144a9c6b98821de0360d005ffc073487bca8fd3e64338e462e7f13547bb81a01312d00825839001f34a1cb96d54a43d199ec2446f051d72adbd6576eb92206bc23fd005cd7064e0630c119aca1da1ba09526c24c5b128d328f349fda8371551a3598126b021a00029151031a0162c456a100818258201415a4576baa24dee656996aed13501dff465e1924f1d5df4a20951a4a65e254584035c87febca0b147b68b70a44c15f0b4a7bd5aeab38d32e7531b02545515dbc3e1420f26dab185bc814296a9fde20aabb4d2934b9cde892c01438f1f54f902309f6"
+                testnet:
+                  $ref: "#/components/schemas/testnet"
         required: true
       responses:
         200:
@@ -202,6 +315,8 @@ paths:
                   type: number
                   description: the mutez amount to be sent
                   example: 22000000
+                testnet:
+                  $ref: "#/components/schemas/testnet"
         required: true
       responses:
         200:
@@ -253,9 +368,17 @@ components:
     timestamp:
       type: number
       example: 1618634222
+    mnemonic:
+      type: string
+      description: Mnemonic string
+      example: "reward erosion ripple critic legend leader zero start open stem spend ritual faint home vocal"
     address:
       type: string
       example: "tz1Swpithxyd3um3AKyB4S5CoT2sdWaCy9Jr"
+    testnet:
+      type: boolean
+      description: "The block is from mainnet or testnet"
+      example: true
     TezosBlockchainInfo:
       type: object
       properties:
@@ -387,10 +510,6 @@ components:
     TezosBlock:
       type: object
       properties:
-        amount:
-          type: number
-          description: amount of block
-          example: 36995060
         blockHash:
           type: string
           description: hash of block
@@ -402,7 +521,7 @@ components:
         confirmations:
           type: number
           description: number of confirmations
-          example: 0
+          example: 2
         consumedGas:
           type: number
           description: consumed gas
@@ -434,11 +553,15 @@ components:
         operationGroupHash:
           type: string
           description: operation group hash
-          example: "op5UPfQ9tffKqEUaXzqFsygS8Bffx9ZPKMvzi6PMBDwcj7bMBi7"
+          example: "ooDd5gabHcdeoq4nicAHf6exTvSkWbYZJAeqeNYgjNYDXpQjWuu"
         operationId:
           type: number
           description: ID of operation
           example: 44915873
+        parameters:
+          type: string
+          description: parameters of the block
+          example: "{ Elt \"BAT-USDC\" (Pair \"spsig1HAhHQp8YuTtgtJ5AvaJRuabcK5FgunbLpRp7G1w7qYDxu9TyL1Gwx8uoHfpwYB813PJUa5ScTw32D4NaUAyygLsFGfjSr\" (Pair 1619164560 (Pair 1619164620 (Pair 974845 (Pair 976214 (Pair 970900 (Pair 971821 11795000000))))))) ; Elt \"BTC-USD\" (Pair \"spsig1QGgNtbLQC2tc8QL1ziaFnuJkX5bHYNbLGcoCs4dDZSUrtL4BZXL33ycndtUg44fykBy91WWa62ezdwxbRuoR8JMfzVtuR\" (Pair 1619164560 (Pair 1619164620 (Pair 47924640000 (Pair 47995490000 (Pair 47853750000 (Pair 47872230000 14980563))))))) ; Elt \"COMP-USD\" (Pair \"spsig1WUnwMJMGQc8BU2ecafw4UUzXF1gQ82LC5pkVogVcVpc3h2eefKPo38jUnKKva84SHnGDurpnRQB8b4k7FBspYQdYnmZ2z\" (Pair 1619164560 (Pair 1619164620 (Pair 451290000 (Pair 452580000 (Pair 450330000 (Pair 451210000 54476000))))))) ; Elt \"DAI-USDC\" (Pair \"spsig1QCHpEQRrchFJNwgCoRxfLYmrGwUWBPSWA7SmKSv1wCLyaSSFgJNdjPqPLrmztKkCBEt37y32Z2rgnWSPetZ6F8vC8L6Z7\" (Pair 1619164560 (Pair 1619164620 (Pair 1000034 (Pair 1000169 (Pair 1000034 (Pair 1000169 89963230))))))) ; Elt \"ETH-USD\" (Pair \"spsig1MN4qThW2Re4VkLrmmHoW2NW4zn67Rs8hf3HJeD8PJ7PMyfGxjSjiSi3KhqzB2BhnhUr3iJH4c75PkYj3AUJQtBhzwD2JE\" (Pair 1619164560 (Pair 1619164620 (Pair 2137330000 (Pair 2145520000 (Pair 2134000000 (Pair 2134719999 500682111))))))) ; Elt \"KNC-USD\" (Pair \"spsig1X1qBMohYxviPgBmowaSzY7c1RQ5AJySTm8bvdaJme8iqLogk3JZXLzMNRvgNcPzAZVHXHC3Cp4arMzHbEekLNySh6P4QC\" (Pair 1619164560 (Pair 1619164620 (Pair 2269500 (Pair 2275200 (Pair 2264500 (Pair 2270000 1474700000))))))) ; Elt \"LINK-USD\" (Pair \"spsig1FX8KrHUY42ecSFsJ9TB5x5pgRBh9TgQynpBhV56enyX2oavfzSFHo47vGUnejcB22HpxT3xwgZwwP5nqpnww1dS6hUkeA\" (Pair 1619164560 (Pair 1619164620 (Pair 30890250 (Pair 31034010 (Pair 30841880 (Pair 30900000 2671880000))))))) ; Elt \"REP-USD\" (Pair \"spsig18FZTdsJyKYaJKU9YHEssSPLY3SCh1rz2ri42kt6e7X745mmTbotFFodSR1dGUWaQKmVv13EXuCBWeNW7g2XshtGGgN9zR\" (Pair 1619164560 (Pair 1619164620 (Pair 34900000 (Pair 34900000 (Pair 34870000 (Pair 34870000 172003036))))))) ; Elt \"XTZ-USD\" (Pair \"spsig1DuHT5eJgHCfmveN8cp58Pq1hd1111bqDqLmPeWLvAE9bAgx6HUfVdB44Ha5CYfju7cNnANmwqJHiW8yf5ozJamqUeXjnT\" (Pair 1619164560 (Pair 1619164620 (Pair 4236900 (Pair 4256900 (Pair 4228300 (Pair 4228300 4361940000))))))) ; Elt \"ZRX-USD\" (Pair \"spsig166F8ZGJhyue6Lre5f6d3gGdrT88JfZRHQJmJ5Q8HA3eP4rAyssqZWKKieNzEZ6Jwt5qAHWUNTTJ2Pd4VDGSREDj9XSi2Q\" (Pair 1619164560 (Pair 1619164620 (Pair 1282902 (Pair 1290052 (Pair 1280005 (Pair 1281774 22014346950))))))) }"
         source:
           description: the address of source
           $ref: "#/components/schemas/address"
